Started APP Proposal

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,10 +8,10 @@ titles_from_headings:
 
 # Modify the contents below for the specific project.
 
-title: "Android Project Proposal"
-description: "Trust me, it'll be cool!"
-author:
-  name: "Java+Android Student"
+title: "We The People"
+description: "Centralize Laws and Notification of New bills"
+author: "wyldus"
+  name: "Dagoberto Garcia"
 
 # Do not change the following line.
   copyright: true
