--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,12 +8,11 @@ titles_from_headings:
 
 # Modify the contents below for the specific project.
 
-title: "We The People"
+title: "WeThePeople"
 description: "Centralize Laws and Notification of New bills"
 
-author: "wyldus"
-
-  name: "Dagoberto Garcia"
+author: "Dagoberto Garcoa"
+name: "Dagoberto Garcia"
 
 # Do not change the following line.
   copyright: true
