--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,10 @@
 remote_theme: ddc-java/ddc-day
 repository_links:
-  enabled: true
+  enabled: false
 page_navigator:
-  enabled: true
+  enabled: false
 titles_from_headings:
-  enabled: true
+  enabled: false
 
 # Modify the contents below for the specific project.
 title: "WeThePeople"
