--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,6 +10,6 @@ titles_from_headings:
 title: "WeThePeople"
 description: "Centralize Laws and Notification of New bills"
 author:
-name:
+name: "Dagoberto"
 # Do not change the following line.
   copyright: true
