--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'androidx.navigation.safeargs'
 
+static def getProperty(String propertyFile, String propertyName) {
+    Properties properties = new Properties()
+    properties.load(new FileInputStream(propertyFile))
+    return properties.getProperty(propertyName)
+}
+
+static def quoted(String value) {
+    return "\"$value\""
+}
+
 android {
 
     compileSdkVersion = 30
@@ -13,6 +23,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField 'String', 'BASE_URL',
+                quoted(getProperty("$projectDir/../../../services/we_the_people.properties", 'base_url'))
+        buildConfigField 'String', 'API_KEY',
+                quoted(getProperty("$projectDir/../../../services/we_the_people.properties", 'api_key'))
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [
@@ -20,6 +35,7 @@ android {
                 ]
             }
         }
+
     }
 
 
